# lox

./: .gitignore  README.md
clox/: .clangd  CMakeLists.txt  main.c
clox/src/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
cslox/: AstPrinter.cs  Expr.cs  Interpreter.cs  Lox.cs  LoxCallable.cs  LoxClass.cs  LoxEnvironment.cs  LoxFunction.cs  LoxInstance.cs  Parser.cs  Resolver.cs  RuntimeError.cs  Scanner.cs  Stmt.cs  Token.cs  TokenType.cs  generate_ast.py
cslox/lox_scripts/: class.lox  class_inheritance.lox  fib.lox
